--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,3 +264,23 @@ h1, h2, h3, h4, h5 {
     .whatsapp-btn:hover {
       background-color: #1DA851;
     }
+.whatsapp-float {
+      position: fixed;
+      width: 60px;
+      height: 60px;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25d366;
+      color: #FFF;
+      border-radius: 50%;
+      text-align: center;
+      font-size: 30px;
+      box-shadow: 2px 2px 5px #999;
+      z-index: 1000;
+    }
+    .whatsapp-float i {
+      margin-top: 16px;
+    }
+    .whatsapp-float:hover {
+      background-color: #1DA851;
+    }
